--- a/.github/workflows/run-postman.yml
+++ b/.github/workflows/run-postman.yml
@@ -22,8 +22,11 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: npm ci
-    # run the npm build command (not used in our project)
     - run: npm run build --if-present
+    - run: npm install -g pm2 
+    - run: pm2 start "npm run dev"
+    # run the npm build command (not used in our project)
+    
        # install pm2 so we can run our node.js
       # based backend without blocking the terminal
     - run: npm run init-adm
