--- a/.github/workflows/run-postman.yml
+++ b/.github/workflows/run-postman.yml
@@ -23,7 +23,9 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: npm run build --if-present
+    - run: npm install -g newman
     - run: npm run init-adm
+    - run: npm run init-sds & npm run init-postman 
     - run: npm install -g pm2 
     - run: pm2 start "npm run dev"
     # run the npm build command (not used in our project)
@@ -34,4 +36,4 @@ jobs:
       # install newman globally so we can run
       # postman collections
       # run our api tests
-    - run: npm run init-sds & npm run init-postman 
+   
