--- a/.github/workflows/run-postman.yml
+++ b/.github/workflows/run-postman.yml
@@ -29,7 +29,7 @@ jobs:
     - run: cd schedule-data-service && npm install
     - run: npm install -g pm2 
     - run: pm2 start "npm run dev"
-    - run: npm run init-postman 
+    - run: cd test-rest-api && npm install -g newman && newman run teacher_newman.json
     # run the npm build command (not used in our project)
     
       # install pm2 so we can run our node.js
