--- a/.github/workflows/run-postman.yml
+++ b/.github/workflows/run-postman.yml
@@ -25,7 +25,7 @@ jobs:
     - run: npm run build --if-present
     - run: npm install -g newman
 
-    - run: cd admin && npm install && vite build"
+    - run: cd admin && npm install && vite build
     - run: cd schedule-data-service && npm install
     - run: npm install -g pm2 
     - run: pm2 start "npm run dev"
