--- a/.github/workflows/run-postman.yml
+++ b/.github/workflows/run-postman.yml
@@ -25,11 +25,11 @@ jobs:
     - run: npm run build --if-present
     - run: npm install -g newman
 
-    - run: cd admin && npm install && vite build
-    - run: cd schedule-data-service && npm install
+    - run: npm run init-adm
+    - run: npm run init-sds
     - run: npm install -g pm2 
     - run: pm2 start "npm run dev"
-    - run: cd test-rest-api && npm install -g newman && newman run teacher_newman.json
+    - run: npm run init-postman
     # run the npm build command (not used in our project)
     
       # install pm2 so we can run our node.js
