--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "init-sds": "cd schedule-data-service && npm install",
     "init-adm": "cd admin && npm install && vite build",
     "cy-test": "npx cypress open",
-    "init-postman": "newman run test-rest-api/teacher_newman.json"
+    "init-postman": "cd test-rest-api && npm install -g newman && newman run teacher_newman.json"
   },
   "keywords": [],
   "author": "",
