--- a/.github/workflows/run-postman.yml
+++ b/.github/workflows/run-postman.yml
@@ -29,7 +29,7 @@ jobs:
     - run: npm run init-sds
     - run: npm install -g pm2 
     - run: pm2 start "npm run dev"
-    - run: npm run init-postman
+    - run: pm2 start "init-postman"
     # run the npm build command (not used in our project)
     
       # install pm2 so we can run our node.js
