--- a/.github/workflows/run-cypress.yml
+++ b/.github/workflows/run-cypress.yml
@@ -23,9 +23,10 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: npm ci
-    - run: npm install -g pm2
     - run: npm run build --if-present
     - run: npm install cypress --save-dev
     - run: npm install --save-dev cypress-cucumber-preprocessor
     - run: npm run init-adm
     - run: npm run init-sds & npx cypress run 
+    - run: npm install -g pm2
+    -run : pm2 start "cy-test"
