--- a/.github/workflows/run-cypress.yml
+++ b/.github/workflows/run-cypress.yml
@@ -27,6 +27,7 @@ jobs:
     - run: npm install cypress --save-dev
     - run: npm install --save-dev cypress-cucumber-preprocessor
     - run: npm run init-adm
-    - run: npm run init-sds & npx cypress run 
+    - run: npm run init-sds
     - run: npm install -g pm2
-    - run : pm2 start "cy-test"
+    - run: Pm2 start "npm run dev"
+    - run: pm2 start "npm run cy-test"
