--- a/.github/workflows/run-cypress.yml
+++ b/.github/workflows/run-cypress.yml
@@ -30,4 +30,4 @@ jobs:
     - run: npm run init-sds
     - run: npm install -g pm2
     - run: npm run dev"
-    - run: npm run cy-test"
+    - run: npm run cy-test
