--- a/.github/workflows/run-postman.yml
+++ b/.github/workflows/run-postman.yml
@@ -22,20 +22,11 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: npm ci
-    - run: npm run build --if-present
     - run: npm install -g newman
-
-    - run: npm run init-adm
-    - run: npm run init-sds
     - run: npm install -g pm2 
+    - run: cd schedule-data-service && npm install
+    - run: cd admin && npm install && npm run build
     - run: pm2 start "npm run dev"
-    - run: pm2 start "npm run init-postman"
-    # run the npm build command (not used in our project)
-    
-      # install pm2 so we can run our node.js
-      # based backend without blocking the terminal
-    
-      # install newman globally so we can run
-      # postman collections
-      # run our api tests
+    - run: newman run test-rest-api/teacher_newman.json
+  
    
