--- a/.github/workflows/run-postman.yml
+++ b/.github/workflows/run-postman.yml
@@ -27,7 +27,6 @@ jobs:
     - run: cd admin && npm install
     - run: cd admin && npm run build
     - run: cd schedule-data-service && npm install 
-    - run: cd schedule-data-service && node index
-    - run: newman run test-rest-api/Teacher_CRUD.postman_collection.json
-  
+    - run: cd schedule-data-service && node index && newman run test-rest-api/Teacher_CRUD.postman_collection.json
+   
    
