--- a/.github/workflows/run-cypress.yml
+++ b/.github/workflows/run-cypress.yml
@@ -26,8 +26,9 @@ jobs:
     - run: npm run build --if-present
     - run: npm install cypress --save-dev
     - run: npm install --save-dev cypress-cucumber-preprocessor
-    - run: npm run init-adm
-    - run: npm run init-sds
+    - run: cd admin && npm install
+    - run: cd admin && npm run build
+    - run: cd schedule-data-service && npm install 
     - run: npm install -g pm2
-    - run: npm run dev
+    - run: cd schedule-data-service && pm2 start "node index"
     - run: npm run cy-test
