--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,6 +5,7 @@ on:
 jobs:
   deploy:
     name: "Deploy dev to dev"
+    needs: [cypress-test,api-test]
     runs-on: ubuntu-latest
     steps:
       - name: Configure SSH
@@ -31,4 +32,7 @@ jobs:
 
       - name: Restart app 
         run: ssh dev 'pm2 restart test_run'        
+
+     
+ 
   
