--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,16 +1,36 @@
 name: Deploy dev
 on: 
-  workflow_run:
-    workflows: ["Run Newman"]
-    types:
-      - completed
   push:
     branches: [test]
-    
 jobs:
+
+api-test:
+
+    runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        node-version: [16.x]
+ 
+    steps:
+    - uses: actions/checkout@v2
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v2
+      with:
+        node-version: ${{ matrix.node-version }}
+        cache: 'npm'
+    - run: npm ci
+    - run: npm install -g newman
+    - run: cd admin && npm install
+    - run: cd admin && npm run build
+    - run: cd schedule-data-service && npm install 
+    - run: npm install -g pm2
+    - run: cd schedule-data-service && pm2 start "node index"
+    - run: newman run test-rest-api/Teacher_CRUD.postman_collection.json
+
   deploy:
     name: "Deploy dev to dev"
-
+    needs: [cypress-test]
     runs-on: ubuntu-latest
     steps:
       - name: Configure SSH
