--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,6 +3,7 @@ on:
   push:
     branches: [test]
 jobs:
+
   api-test:
 
     runs-on: ubuntu-latest
@@ -26,9 +27,10 @@ jobs:
     - run: npm install -g pm2
     - run: cd schedule-data-service && pm2 start "node index"
     - run: newman run test-rest-api/Teacher_CRUD.postman_collection.json
-deploy:
+
+  deploy:
     name: "Deploy dev to dev"
-    needs: [cypress-test]
+    needs: [api-test]
     runs-on: ubuntu-latest
     steps:
       - name: Configure SSH
@@ -54,7 +56,4 @@ deploy:
         run: ssh dev 'cd test/ && git fetch && git pull origin test && npm install'
 
       - name: Restart app 
-        run: ssh dev 'pm2 restart test_run'    
-
- 
-              
+        run: ssh dev 'pm2 restart test_run'   
